# mcdx31

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build_exe.ps1  launcher.py  pyproject.toml
src/mcdx31/: __init__.py  _constants.py  _transforms.py  cli.py  gui.py
src/mcdx_downgrade/: _transforms.py  _validate.py  cli.py  gui.py
tests/: make_fixtures.py  test_cli.py  test_transforms.py  test_validate.py
tests/fixtures/: minimal_prime12.mcdx  minimal_prime31.mcdx
