[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcdx31"
version = "0.1.0"
description = "Convert Mathcad Prime 4–12 .mcdx worksheets to Prime 3.1 format — useful when you need compatibility with an older Mathcad installation or need to share calculations with colleagues running Prime 3.1"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []
keywords = ["mathcad", "mcdx", "engineering", "prime", "compatibility", "convert", "version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
mcdx31 = "mcdx_downgrade.cli:main"
mcdx31-gui = "mcdx_downgrade.gui:main"

[project.urls]
Homepage = "https://github.com/PJMEND/mcdx31"
Issues = "https://github.com/PJMEND/mcdx31/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcdx_downgrade"]

[tool.pytest.ini_options]
testpaths = ["tests"]
